# mygists

./: .gitignore  arrow_parquet.ipynb  built-in.ipynb  cv_augmentation.ipynb  cv_datasets.ipynb  d2l_augmentation.ipynb  d2l_datasets.ipynb  d2l_intro.ipynb  geocomputation.ipynb  hug_intro.ipynb  pyproject.toml
.ipynb_checkpoints/: .gitignore-checkpoint  transfer_learning-checkpoint.ipynb
_archive/: 6_decision_trees.py  8_dimensionality_reduction.ipynb  detectron2.qmd
