[tool.poetry]
name = "mygists"
version = "0.1.0"
description = ""
authors = ["Hendrik Wagenseil <hendrik.wagenseil@addium.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
